tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__chat_small_running_h3.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1309
expression: normalized_backend_snapshot(terminal.backend())
---
"                                        "
"────────────────────────────────────────"
"────────────────────────────────────────"
