tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • agere-logs.log
    • agere-connectivity-diagnostics.txt

› 1. Yes  Share the current Agere session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
