tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  How was this?

  › 1. bug           Crash, error message, hang, or broken UI/behavior.
    2. bad result    Output was off-target, incorrect, incomplete, or unhelpful.
    3. good result   Helpful, correct, high‑quality, or delightful result worth
                     celebrating.
    4. safety check  Benign usage blocked due to safety checks or refusals.
    5. other         Slowness, feature suggestion, UX feedback, or anything
                     else.

  Press enter to confirm or esc to go back
