tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • agere-logs.log
    • agere-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

  › 1. Yes  Share the current Agere session logs with the team for
            troubleshooting.
    2. No

  Press enter to confirm or esc to go back
